// 指定的当前proto语法的版本，有2和3
syntax = "proto3";

// 指定文件生成出来的package
package instance;

//云主机相关服务
service InstanceService{
  //创建云主机
  rpc CreateInstance(CreateInstanceReq) returns(InstanceRes);
  //获取云主机信息
  rpc GetInstance(GetInstanceReq) returns(InstanceRes);
  //修改云主机规格
  rpc UpdateInstanceFlavor(UpdateInstanceFlavorReq) returns(InstanceRes);
  //删除云主机
  rpc DeleteInstance(DeleteInstanceReq) returns(DeleteInstanceRes);
  //启动-停止-挂起-重启云主机
  rpc OperateInstance(OperateInstanceReq) returns(OperateInstanceRes);
}

message Flavor {
  string flavor_id = 1;
  string flavor_name = 2;
  string flavor_vcpus = 3;
  string flavor_ram = 4;
  string flavor_disk = 5;
}

message CloudDiskConf {
  string volume_type = 1;
  int32 size_in_g = 2;
}

message CloudDiskInfo {
  string volume_type = 1;
  int32 size_in_g = 2;
  string device = 3;
  string volume_id = 4;
}

message InstanceRes {
  int32 code = 1;
  string msg = 2;
  message Instance {
    string instance_id = 1;
    string instance_status = 2;
    string instance_addr = 3;
    string region = 4;
    string availability_zone = 5;
    Flavor flavor = 6;
    string image_ref = 7;
    CloudDiskInfo system_disk = 8;
    repeated CloudDiskInfo data_disks = 9;
    string network_uuid = 10;
    repeated string security_group_name = 11;
    string instance_name = 12;
    string guest_os_hostname = 13;
    string created_time = 14;
    string updated_time = 15;
  }
  Instance instance = 3;
}

message CreateInstanceReq {
  string apikey = 1;
  string tenant_id = 2;
  string platform_userid = 3;
  string region = 4;
  string availability_zone = 5;
  string flavor_ref = 6;
  string image_ref = 7;
  CloudDiskConf system_disk = 8;
  repeated CloudDiskConf data_disks = 9;
  string network_uuid = 10;
  repeated string security_group_name = 11;
  string instance_name = 12;
  string guest_os_hostname = 13;
  string root_pass = 14;
}

message GetInstanceReq {
  string apikey = 1;
  string tenant_id = 2;
  string platform_userid = 3;
  string instance_id = 4;
}

message UpdateInstanceFlavorReq {
  string apikey = 1;
  string tenant_id = 2;
  string platform_userid = 3;
  string instance_id = 4;
  string flavor_ref = 5;
}

message DeleteInstanceReq {
  string apikey = 1;
  string tenant_id = 2;
  string platform_userid = 3;
  string instance_id = 4;
}

message DeleteInstanceRes {
  int32 code = 1;
  string msg = 2;
  string instance_id = 3;
  string deleted_time = 4;
}

message OperateInstanceReq {
  string apikey = 1;
  string tenant_id = 2;
  string platform_userid = 3;
  string instance_id = 4;
  string operate_type = 5; //start/stop/softreboot/hardreboot/suspend
}

message OperateInstanceRes {
  int32 code = 1;
  string msg = 2;
  string instance_id = 3;
  string operated_time = 4;
  string operate_type = 5;
}








